NoTask - fixed lint tests and updated npm test command

--- a/.jscsrc
+++ b/.jscsrc
@@ -63,7 +63,7 @@
       "++",
       "--"
     ],
-    "requireCamelCaseOrUpperCaseIdentifiers": true,
+    "requireCamelCaseOrUpperCaseIdentifiers": "ignoreProperties",
     "disallowKeywords": ["with"],
     "disallowMultipleLineStrings": true,
     "validateLineBreaks": "LF",
